testsuite/tests/typecheck/should_fail/T15438.stderr

T15438.hs:7:8: error:
    • Could not deduce (C a0 b)
      from the context: C a b
        bound by a type expected by the context:
                   forall a b. C a b => b -> b
        at T15438.hs:7:8-43
      The type variable ‘a0’ is ambiguous
    • In the ambiguity check for ‘foo’
      To defer the ambiguity check to use sites, enable AllowAmbiguousTypes
      In the type signature: foo :: (forall a b. C a b => b -> b) -> Int
